--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🎂 Happy Birthday 🎂</title>
+    <title> Happy Birthday </title>
+    <link rel="shortcut icon" href="https://icons8.com/icon/12868/birthday-cake" type="iæ√√√√√√√√√√√mage/x-icon">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap');
         
