--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Happy Birthday </title>
-    <link rel="shortcut icon" href="https://icons8.com/icon/12868/birthday-cake" type="iæ√√√√√√√√√√√mage/x-icon">
+    <link rel="shortcut icon" href="https://img.icons8.com/?size=100&id=12868&format=png&color=000000" type="iæ√√√√√√√√√√√mage/x-icon">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap');
         
