--- a/index.html
+++ b/index.html
@@ -245,22 +245,22 @@
         /* Message Card */
         .message-card {
             background: rgba(255, 255, 255, 0.1);
-            border-radius: 16px; /* 20px -> 16px */
-            padding: 1rem; /* 1.5rem -> 1rem */
-            max-width: 400px; /* 90% -> 400px sabit genişlik */
-            width: 100%;
+            border-radius: 24px; /* Tekrar büyük boyut */
+            padding: 2rem; /* Tekrar büyük padding */
+            max-width: 600px; /* Büyük ekranlar için geniş */
+            width: 90%; /* Responsive genişlik */
             text-align: center;
             backdrop-filter: blur(20px);
             border: 1px solid rgba(255, 255, 255, 0.2);
             box-shadow: 0 8px 32px rgba(31, 38, 135, 0.37);
-            margin: 1rem auto; /* 1.5rem -> 1rem */
+            margin: 2rem auto; /* Büyük margin */
             position: relative;
             z-index: 10;
         }
 
         .message-text {
-            font-size: 0.9rem; /* 1rem -> 0.9rem */
-            line-height: 1.5; /* 1.6 -> 1.5 */
+            font-size: 1.2rem; /* Büyük yazı boyutu */
+            line-height: 1.8; /* Rahat satır aralığı */
             color: rgba(255, 255, 255, 0.95);
             font-weight: 300;
         }
@@ -402,15 +402,16 @@
             }
 
             .message-card { 
-                padding: 0.8rem; /* 1rem -> 0.8rem */
-                margin: 0.8rem auto; /* 1rem -> 0.8rem */
-                border-radius: 12px; /* 16px -> 12px */
-                max-width: 320px; /* 400px -> 320px */
+                padding: 1.5rem; /* Mobilde biraz küçük */
+                margin: 1.5rem auto;
+                border-radius: 20px;
+                max-width: 500px; /* Mobilde biraz daha dar */
+                width: 85%; /* Mobilde kenar boşlukları */
             }
 
             .message-text {
-                font-size: 0.8rem; /* 0.9rem -> 0.8rem */
-                line-height: 1.4; /* 1.5 -> 1.4 */
+                font-size: 1rem; /* Mobilde biraz küçük yazı */
+                line-height: 1.6;
             }
         }
 
@@ -445,15 +446,16 @@
             }
 
             .message-card {
-                padding: 0.7rem; /* 0.8rem -> 0.7rem */
-                margin: 0.6rem auto; /* 0.8rem -> 0.6rem */
-                max-width: 280px; /* 95% -> 280px */
-                border-radius: 10px; /* 12px -> 10px */
+                padding: 1.2rem; /* Küçük ekranlarda daha az padding */
+                margin: 1rem auto;
+                max-width: 400px;
+                width: 90%; /* Daha geniş kullanım */
+                border-radius: 18px;
             }
 
             .message-text {
-                font-size: 0.75rem; /* 0.8rem -> 0.75rem */
-                line-height: 1.3; /* 1.4 -> 1.3 */
+                font-size: 0.9rem; /* Küçük ekranlarda küçük yazı */
+                line-height: 1.5;
             }
 
             .footer {
@@ -478,18 +480,33 @@
             }
 
             .message-card {
-                padding: 0.6rem; /* 1rem -> 0.6rem */
-                margin: 0.3rem auto; /* 0.5rem -> 0.3rem */
-                max-width: 350px;
+                padding: 1rem; /* Yatay ekranda kompakt */
+                margin: 1rem auto;
+                max-width: 450px;
+                width: 80%;
             }
 
             .message-text {
-                font-size: 0.8rem;
-                line-height: 1.3;
+                font-size: 0.95rem;
+                line-height: 1.4;
             }
 
             .mic-container {
                 margin: 0.8rem 0;
+            }
+        }
+
+        /* Tablet boyutları için */
+        @media (min-width: 481px) and (max-width: 1024px) {
+            .message-card {
+                max-width: 550px;
+                width: 85%;
+                padding: 1.8rem;
+            }
+
+            .message-text {
+                font-size: 1.1rem;
+                line-height: 1.7;
             }
         }
 
